attempting to fix z-index issue with upload modal

--- a/styles.css
+++ b/styles.css
@@ -1019,7 +1019,7 @@ main {
 .upload-modal {
     display: none;
     position: fixed;
-    z-index: 2000;
+    z-index: 20000;
     top: 0;
     left: 0;
     width: 100%;
